added pagination and filtering for orders